--- a/analytics/assignment5.ipynb
+++ b/analytics/assignment5.ipynb
@@ -387,12 +387,11 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "rX, rY = shuffle(X, Y, random_state=0)\n",
-    "X_train, X_test, Y_train, Y_test = train_test_split(rX, rY, test_size=0.20, random_state=42)"
+    "X_train, X_test, Y_train, Y_test = train_test_split(X, Y, test_size=0.20)"
    ]
   },
   {
@@ -421,7 +420,7 @@
      "data": {
       "text/plain": [
        "SVC(C=1.0, cache_size=200, class_weight=None, coef0=0.0,\n",
-       "  decision_function_shape=None, degree=3, gamma=0.8, kernel='rbf',\n",
+       "  decision_function_shape=None, degree=3, gamma=0.7, kernel='rbf',\n",
        "  max_iter=-1, probability=False, random_state=None, shrinking=True,\n",
        "  tol=0.001, verbose=False)"
       ]
@@ -432,7 +431,7 @@
     }
    ],
    "source": [
-    "clf = svm.SVC(kernel = 'rbf', gamma = 0.8)\n",
+    "clf = svm.SVC(kernel = 'rbf', gamma = 0.7)\n",
     "clf.fit(X_train, Y_train)"
    ]
   },
@@ -454,8 +453,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training Set Error Rate: 0.0700555555556\n",
-      "Test Set Error Rate: 0.0757777777778\n"
+      "Training Set Error Rate: 0.0726666666667\n",
+      "Test Set Error Rate: 0.0688888888889\n"
      ]
     }
    ],
@@ -648,7 +647,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Experiment Error Rate: 0.939775485437\n"
+      "Experiment Error Rate: 0.93932038835\n"
      ]
     }
    ],
