--- a/analytics/assignment5.ipynb
+++ b/analytics/assignment5.ipynb
@@ -453,8 +453,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training Set Error Rate: 0.0726666666667\n",
-      "Test Set Error Rate: 0.0688888888889\n"
+      "Training Set Error Rate: 0.0724444444444\n",
+      "Test Set Error Rate: 0.0693333333333\n"
      ]
     }
    ],
@@ -487,7 +487,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Shape of Data: (13184, 6)\n"
+      "Shape of Data: (14000, 8)\n"
      ]
     },
     {
@@ -498,9 +498,11 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>time</th>\n",
-       "      <th>Red</th>\n",
        "      <th>IR</th>\n",
+       "      <th>RED</th>\n",
+       "      <th>heart_rate</th>\n",
+       "      <th>respiration_rate</th>\n",
+       "      <th>SPO2</th>\n",
        "      <th>X</th>\n",
        "      <th>Y</th>\n",
        "      <th>Z</th>\n",
@@ -509,60 +511,77 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>82472</td>\n",
-       "      <td>123447</td>\n",
-       "      <td>0.028023</td>\n",
-       "      <td>-0.034028</td>\n",
-       "      <td>0.901733</td>\n",
+       "      <td>118885</td>\n",
+       "      <td>100363</td>\n",
+       "      <td>92.307692</td>\n",
+       "      <td>17.647059</td>\n",
+       "      <td>80.151701</td>\n",
+       "      <td>-0.088072</td>\n",
+       "      <td>0.007006</td>\n",
+       "      <td>0.956777</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>50</td>\n",
-       "      <td>105677</td>\n",
-       "      <td>123795</td>\n",
-       "      <td>0.030024</td>\n",
-       "      <td>-0.037030</td>\n",
-       "      <td>1.034841</td>\n",
+       "      <td>118913</td>\n",
+       "      <td>100314</td>\n",
+       "      <td>92.307692</td>\n",
+       "      <td>17.647059</td>\n",
+       "      <td>80.151701</td>\n",
+       "      <td>-0.045037</td>\n",
+       "      <td>0.039032</td>\n",
+       "      <td>0.933759</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>100</td>\n",
-       "      <td>105565</td>\n",
-       "      <td>121904</td>\n",
-       "      <td>0.031025</td>\n",
-       "      <td>-0.034028</td>\n",
-       "      <td>1.034841</td>\n",
+       "      <td>118642</td>\n",
+       "      <td>100268</td>\n",
+       "      <td>92.307692</td>\n",
+       "      <td>17.647059</td>\n",
+       "      <td>80.151701</td>\n",
+       "      <td>-0.032026</td>\n",
+       "      <td>0.096078</td>\n",
+       "      <td>0.831676</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>150</td>\n",
-       "      <td>104186</td>\n",
-       "      <td>118390</td>\n",
-       "      <td>0.032026</td>\n",
-       "      <td>-0.031025</td>\n",
-       "      <td>1.040846</td>\n",
+       "      <td>117757</td>\n",
+       "      <td>100050</td>\n",
+       "      <td>92.307692</td>\n",
+       "      <td>17.647059</td>\n",
+       "      <td>80.151701</td>\n",
+       "      <td>0.005004</td>\n",
+       "      <td>0.086070</td>\n",
+       "      <td>0.824670</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>200</td>\n",
-       "      <td>103502</td>\n",
-       "      <td>117783</td>\n",
-       "      <td>0.030024</td>\n",
-       "      <td>-0.038031</td>\n",
-       "      <td>1.038844</td>\n",
+       "      <td>117224</td>\n",
+       "      <td>99614</td>\n",
+       "      <td>92.307692</td>\n",
+       "      <td>17.647059</td>\n",
+       "      <td>80.151701</td>\n",
+       "      <td>0.006005</td>\n",
+       "      <td>0.106086</td>\n",
+       "      <td>0.837681</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   time     Red      IR         X         Y         Z\n",
-       "0     0   82472  123447  0.028023 -0.034028  0.901733\n",
-       "1    50  105677  123795  0.030024 -0.037030  1.034841\n",
-       "2   100  105565  121904  0.031025 -0.034028  1.034841\n",
-       "3   150  104186  118390  0.032026 -0.031025  1.040846\n",
-       "4   200  103502  117783  0.030024 -0.038031  1.038844"
+       "       IR     RED   heart_rate   respiration_rate       SPO2         X  \\\n",
+       "0  118885  100363    92.307692          17.647059  80.151701 -0.088072   \n",
+       "1  118913  100314    92.307692          17.647059  80.151701 -0.045037   \n",
+       "2  118642  100268    92.307692          17.647059  80.151701 -0.032026   \n",
+       "3  117757  100050    92.307692          17.647059  80.151701  0.005004   \n",
+       "4  117224   99614    92.307692          17.647059  80.151701  0.006005   \n",
+       "\n",
+       "          Y         Z  \n",
+       "0  0.007006  0.956777  \n",
+       "1  0.039032  0.933759  \n",
+       "2  0.096078  0.831676  \n",
+       "3  0.086070  0.824670  \n",
+       "4  0.106086  0.837681  "
       ]
      },
      "execution_count": 8,
@@ -571,7 +590,7 @@
     }
    ],
    "source": [
-    "samples = pd.read_csv('../server/data/ppg_motionData.csv')\n",
+    "samples = pd.read_csv('../server/data/features_walking.csv')\n",
     "\n",
     "print(\"Shape of Data: \" + str(samples.shape))\n",
     "samples[:5]"
@@ -597,22 +616,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Shape of input: (13184, 3)\n",
-      "[[ -1.0518577    0.2117758  -17.56229858]\n",
-      " [ -0.49454546  -0.64255545  -1.03285737]\n",
-      " [ -0.21575008   0.2117758   -1.03285737]\n",
+      "Shape of input: (14000, 3)\n",
+      "[[-0.45777321  0.01377021 -0.37108304]\n",
+      " [-0.03798944  0.30395092 -0.48184501]\n",
+      " [ 0.08892602  0.82083247 -0.97306553]\n",
       " ..., \n",
-      " [ -0.77306232  -0.07281156  -0.03866689]\n",
-      " [  0.0630453    2.49046679  -0.41145727]\n",
-      " [ -0.77306232   1.35126359  -0.41145727]]\n",
-      "Shape of output: (13184, 1)\n",
-      "[[ 2.]\n",
-      " [ 2.]\n",
-      " [ 2.]\n",
+      " [-0.13561221  0.78456215  0.5391207 ]\n",
+      " [-0.58467891  1.04753332  0.50540802]\n",
+      " [-0.49682037  1.21076337  1.32892409]]\n",
+      "Shape of output: (14000, 1)\n",
+      "[[ 3.]\n",
+      " [ 3.]\n",
+      " [ 3.]\n",
       " ..., \n",
-      " [ 2.]\n",
-      " [ 2.]\n",
-      " [ 2.]]\n"
+      " [ 3.]\n",
+      " [ 3.]\n",
+      " [ 3.]]\n"
      ]
     }
    ],
@@ -621,7 +640,7 @@
     "mean = np.mean(X_exp, axis=0).reshape(1,3)\n",
     "std = np.std(X_exp, axis=0).reshape(1,3)\n",
     "X_exp = (X_exp - mean)/std\n",
-    "Y_exp = np.ones((X_exp.shape[0], 1)) * 2\n",
+    "Y_exp = np.ones((X_exp.shape[0], 1)) * 3\n",
     "\n",
     "print(\"Shape of input: \" + str(X_exp.shape))\n",
     "print(X_exp)\n",
@@ -647,7 +666,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Experiment Error Rate: 0.93932038835\n"
+      "Experiment Error Rate: 0.960571428571\n"
      ]
     }
    ],
